# duquantum

./: .gitignore  CMakeLists.txt  Makefile  dev-requirements.txt  main.py  statevec.cu  statevec.hpp  utils.cu  utils.hpp
tests/: CMakeLists.txt  statevec_test.cc  test_colab_gpu.ipynb
